updated navbar and blog component to correct dark mode config

--- a/frontend/src/styles/tailwind.css
+++ b/frontend/src/styles/tailwind.css
@@ -7,7 +7,7 @@
         @apply dark:bg-gray-800 bg-gray-400 dark:hover:bg-gray-700 hover:bg-gray-300 dark:text-white text-black font-bold py-2 px-4 mx-2 font-medium rounded-md transition-colors duration-300;
     }
     .btn-navbar{
-        @apply text-gray-300 hover:text-white hover:bg-gradient-to-r from-purple-500 to-red-500 px-3 py-2 rounded-md text-sm font-medium transition-colors duration-300
+        @apply dark:text-white text-black hover:text-white hover:bg-gradient-to-r from-purple-500 to-red-500 px-3 py-2 rounded-md text-sm font-medium transition-colors duration-300
     }
 }
 
